--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
 
 </body>
-<script type="module" src="index.js"></script>
+<script src="js/vendor/underscore.js" charset="utf-8"></script>
+<script src="js/vendor/backbone.js" charset="utf-8"></script>
+<script src="index.js"></script>
 
 </html>
