--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 
-<body>
-
-</body>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
 <script src="js/vendor/underscore.js" charset="utf-8"></script>
 <script src="js/vendor/backbone.js" charset="utf-8"></script>
 <script src="index.js"></script>
+
+<body>
+    <ul id="users-list"></ul>
+
+    <script>
+        var MuppetsListView = Backbone.View.extend({
+            el: '#users-list'
+        });
+    </script>
+</body>
 
 </html>
