init gulp and use babel react preset to parse JSX

--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
 <script src="js/vendor/backbone.js" charset="utf-8"></script>
 
 <body>
+    <div id="root">
+
+    </div>
     <ul id="users-list"></ul>
 </body>
-
-<script src="index.js"></script>
+<script src="./js/vendor/react.development.js"></script>
+<script src="./js/vendor/react-dom.development.js"></script>
+<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+<script src="dist/App.js"></script>
+<script src="dist/index.js"></script>
 
 </html>
