set up gulp + es module structure

--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     </div>
     <ul id="users-list"></ul>
 </body>
-<script src="./js/vendor/react.development.js"></script>
-<script src="./js/vendor/react-dom.development.js"></script>
-<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-<script src="dist/App.js"></script>
-<script src="dist/index.js"></script>
+<script src="https://unpkg.com/react@16.7.0/umd/react.production.min.js"></script>
+<script src="https://unpkg.com/react-dom@16.7.0/umd/react-dom.production.min.js"></script>
+<script type="module" src="dist/App.js"></script>
+<script type="module" src="dist/index.js"></script>
 
 </html>
