--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <div id="root">
     </div>
 </body>
-<script type="module" src="dist/index.js"></script>
+<script src="dist/bundle.js"></script>
 
 </html>
